<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>demo_jira</groupId>
  <artifactId>demo_jira1</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<ui.core.version>3.0.0</ui.core.version>
		<maven.surefire.version>2.19.1</maven.surefire.version>
		<java.version>11</java.version>
		<maven.compiler.version>2.3.2</maven.compiler.version>
	</properties>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.version}</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
				<executions>
					<execution>
						<id>default-test</id>
						<configuration>
							<skip>false</skip>
							<groups>${executionTag}</groups>
							<suiteXmlFiles>
								<suiteXmlFile>testng.xml</suiteXmlFile>
							</suiteXmlFiles>
						</configuration>
					</execution>

					<execution>
						<id>test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<forkCount>${forkCount}</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/Parallel*.java</include>
							</includes>
							<excludes>
								<exclude>**/Abstract*.java</exclude>
							</excludes>
							<junitArtifactName>junit:junit</junitArtifactName>
							<argLine>-Xmx512m</argLine>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
				<excludes>
					<exclude>**/*.exe</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.maven.surefire</groupId>
			<artifactId>surefire-junit4</artifactId>
			<version>${maven.surefire.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>telusdigital.test.automation</groupId>
			<artifactId>jira-handler</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>telusdigital.unified.framework.release</groupId>
			<artifactId>ui-core</artifactId>
			<version>3.0.2</version>
<!--			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
			</exclusions>-->
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.5.1</version>
		</dependency>
	</dependencies>
</project>
